@@ -1,3 +1,10 @@
+2005-10-20  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* tools/gst-inspect.c: (print_interfaces),
+	(print_element_properties_info), (print_element_info):
+	  Fix interface output with gst-inspect -a; don't print
+	  newlines after double/float properties.
+
 2005-10-20  Wim Taymans  <wim@fluendo.com>
 
 	* gst/base/gstbasesink.c: (gst_base_sink_get_position),
